[tool.poetry]
name = "aganaithtask"
version = "0.1.0"
description = ""
authors = ["NarmalaSk <shashinarmala29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
